--- a/SkillSnap.Client/_Imports.razor
+++ b/SkillSnap.Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using SkillSnap.Client
 @using SkillSnap.Client.Layout
 @using SkillSnap.Client.Components
+@using SkillSnap.Client.Models
+@using SkillSnap.Client.Services
