--- a/SkillSnap.Client/Layout/NavMenu.razor
+++ b/SkillSnap.Client/Layout/NavMenu.razor
@@ -22,6 +22,12 @@
             </NavLink>
         </div>
         
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="test">
+                <span class="bi bi-check-circle-fill-nav-menu" aria-hidden="true"></span> Test Suite
+            </NavLink>
+        </div>
+        
         @if (AuthService.IsAuthenticated)
         {
             <div class="nav-item px-3">
